fix: overflow bug

--- a/css/style.css
+++ b/css/style.css
@@ -33,10 +33,6 @@ body {
 .container {
   position: relative;
   padding: 0 20px;
-
-  overflow-y: scroll;
-  scroll-behavior: smooth;
-  scroll-snap-type: y mandatory;
 }
 
 .banner .container {
